modal enhance. Grunt task to clean and build. fix scrollbar in commandbar acivity log outside webkit.

--- a/clotho3-web/app/styles/main.scss
+++ b/clotho3-web/app/styles/main.scss
@@ -31,6 +31,7 @@ body {
   overflow-y: scroll;
   overflow-x: hidden;
   max-height: 700px; /*just in case... need to define with inline style*/
+  width: 100%;
 }
 
 div.inline {
